2008-01-03  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_alloc): Correctly account folios.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (libhurd_cap_a_CPPFLAGS): Add
	-mpreferred-stack-boundary=2.

	* as.c (ensure_stack) [! RM_INTERN]: New function.
	(AS_LOCK) [! RM_INTERN]: Call it.
	* cap-lookup.c (ensure_stack) [! RM_INTERN]: New function.
	(AS_LOCK): New macro.
	(AS_UNLOCK): Likewise.
	(cap_lookup_rel): Use AS_LOCK and AS_UNOCK rather than
	pthread_rwlock_rdlock and pthread_rwlock_unlock, respectively.
	(object_lookup_rel): Likewise.
	(slot_lookup_rel): Likewise.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (parse_args) [DEBUG_ELIDE]: Indicate in the help text
	that debugging output is disabled.  Don't assign to OUTPUT_DEBUG in
	this case.
	(memory_configure): Use do_debug rather than directly checking
	against OUTPUT_DEBUG.
	(system_task_load): Likewise.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* t-link.c: Include <stdlib.h>.
	(test): Use malloc to allocate the object.  Free them on unlink.
	Improve coverage of tail and prev functions.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* object.c (memory_object_destroy): Unlock LRU_LOCK.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* activity.h: Don't include <l4.h>, <errno.h> or <hurd/btree.h>.
	Include <hurd/activity.h>.
	(struct activity): Remove fields priority, weight and
	storage_quota.  Replace with policy.  Change folio_count to a
	uint32_t.  Update users.

	* server.c (server_loop): Remove activity_properties
	implementation.  Add activity_policy implementation.

	* rm.h (rm_method_id_string): Remove RM_activity_properties case.
	Handle RM_activity_policy.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Rename field parent to parent_cap.
	Rename field children to children_cap.  Rename field sibling_next
	to sibling_next_cap.  Rename field sibling_prev to
	sibling_prev_cap.  Rename field parent_ptr to parent.  Add fields